--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,3 +5,10 @@
 
  <%= link_to 'Edit', edit_post_path(@post) %> |
  <%= link_to 'Back', posts_path %>
+ <h2>Comments</h2>
+ 
+<p><%= link_to 'Add a Comment', new_post_comment_path(@post) %></p>
+ 
+<ul class="comment_list">
+  <%= render :partial => 'comments/comment', :collection => @post.comments %>
+</ul>
